--- a/sdk-docs/file/src/Service.js.html
+++ b/sdk-docs/file/src/Service.js.html
@@ -33,30 +33,29 @@
 <nav class="navigation" data-ice="nav"><div>
   <ul>
     
-  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Job.js~Job.html">Job</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Server.js~Server.html">Server</a></span></span></li>
+  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Client.js~Client.html">Client</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Job.js~Job.html">Job</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Service.js~Service.html">Service</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Task.js~Task.html">Task</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-GSF">GSF</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Accepted">Accepted</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Completed">Completed</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Failed">Failed</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobInfo">JobInfo</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Progress">Progress</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Started">Started</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Succeeded">Succeeded</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-ClientOptions">ClientOptions</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobListOptions">JobListOptions</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobAccepted">JobAccepted</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobCompleted">JobCompleted</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobFailed">JobFailed</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobProgress">JobProgress</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobStarted">JobStarted</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobSucceeded">JobSucceeded</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobListOptions">JobListOptions</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-ServerArgs">ServerArgs</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-GSF">GSF</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobInfo">JobInfo</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobResults">JobResults</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-NodeInfo">NodeInfo</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-ServiceInfo">ServiceInfo</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-InputParameter">InputParameter</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobOptions">JobOptions</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobProgressInfo">JobProgressInfo</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobResults">JobResults</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobStartedInfo">JobStartedInfo</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-OutputParameter">OutputParameter</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-SubmitOptions">SubmitOptions</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-TaskInfo">TaskInfo</a></span></span></li>
 </ul>
@@ -64,8 +63,126 @@
 </nav>
 
 <div class="content" data-ice="content"><h1 data-ice="title">src/Service.js</h1>
-<pre class="source-code line-number raw-source-code"></pre>
-<p data-ice="emptySourceCode">Sorry, this documentation does not provide source code.</p>
+<pre class="source-code line-number raw-source-code"><code class="prettyprint linenums" data-ice="content">import * as request from &apos;superagent&apos;;
+import saNoCache from &apos;superagent-no-cache&apos;;
+
+import * as sdkUtils from &apos;./utils/utils.js&apos;;
+import Task from &apos;./Task&apos;;
+import * as SERVER_API from &apos;./utils/GSF_API&apos;;
+
+const nocache = sdkUtils.isIE() ? saNoCache.withQueryStrings : saNoCache;
+
+/**
+ * The Service class is used to inspect and create tasks for a service.
+ */
+class Service {
+  /**
+   * @param {Client} client - The GSF client object.
+   * @param {string} serviceName - The name of the service.
+   */
+  constructor(client, serviceName) {
+    /**
+     * The service name.
+     * @type {string}
+     */
+    this.name = serviceName;
+
+    // Client object.
+    this._client = client;
+  }
+
+  /**
+   * The ServiceInfo object contains information about a service.
+   * @typedef {Object} ServiceInfo
+   * @property {string} name - The name of the service.
+   * @property {string} description - A description of the service.
+   */
+
+  /**
+   * Retrieves the service information.
+   * @return {Promise&lt;ServiceInfo, error&gt;} Returns a Promise to the
+   *  ServiceInfo object.
+   */
+  info() {
+    return new Promise((resolve, reject) =&gt; {
+      // Build service info url.
+      const url = [this._client.rootURL, SERVER_API.SERVICES_PATH, this.name].join(&apos;/&apos;);
+
+      // Get service info so we can pull off the tasks array.
+      request
+        .get(url)
+        .use(nocache) // Prevents caching of *only* this request
+        .set(this._client.headers)
+        .end((err, res) =&gt; {
+          if (res &amp;&amp; res.ok) {
+            resolve(res.body);
+          } else {
+            const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
+            const text = ((err &amp;&amp; err.response &amp;&amp; err.response.text) ? &apos;: &apos; +
+             err.response.text : &apos;&apos;);
+            reject(&apos;Error requesting service info&apos; + status + text);
+          }
+        });
+    });
+  }
+
+  /**
+   * Returns a task object.
+   * @param {string} taskName - The name of the task.
+   * @return {Task} Returns the task object.
+   */
+  task(taskName) {
+    return new Task(this, taskName);
+  }
+
+  /**
+   * Retrieves the array of task info objects available on the service.
+   * @version 1.1.0
+   * @return {Promise&lt;TaskInfo[], error&gt;} Returns a Promise to an array of TaskInfo objects.
+   */
+  taskInfoList() {
+    return new Promise((resolve, reject) =&gt; {
+      // Build service info url.
+      const url = [this._client.rootURL, SERVER_API.SERVICES_PATH,
+        this.name, SERVER_API.TASKS_PATH].join(&apos;/&apos;);
+
+      // Get service info so we can pull off the tasks array.
+      request
+        .get(url)
+        .query({ taskInfo: true })
+        .use(nocache) // Prevents caching of *only* this request
+        .set(this._client.headers)
+        .end((err, res) =&gt; {
+          if (res &amp;&amp; res.ok) {
+            resolve(res.body.tasks);
+          } else {
+            const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
+            const text = ((err &amp;&amp; err.response &amp;&amp; err.response.text) ? &apos;: &apos; +
+             err.response.text : &apos;&apos;);
+            reject(&apos;Error requesting task info objects&apos; + status + text);
+          }
+        });
+    });
+  }
+
+  /**
+   * Retrieves the array of task objects available on the service.
+   * @return {Promise&lt;Task[], error&gt;} Returns a Promise to an array of Task objects.
+   */
+  tasks() {
+    return this
+      .taskInfoList()
+      .then((taskInfoList) =&gt; (
+        taskInfoList.map((taskInfo) =&gt; (new Task(this, taskInfo.taskName))))
+      );
+  }
+}
+
+export default Service;
+
+
+</code></pre>
+
 </div>
 
 <footer class="footer">
