--- a/sdk-docs/manual/installation/installation.html
+++ b/sdk-docs/manual/installation/installation.html
@@ -41,7 +41,37 @@
 <div data-ice="manual" data-toc-name="tutorial">
     <ul class="manual-toc">
       
-    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
+    <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html" data-ice="link">Migration Guide: Moving from v2 to v3</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#server-class" data-ice="link">Server Class</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#gsf-server-is-now-gsf-client-" data-ice="link">GSF.Server is now GSF.Client.</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#client-apiroot-no-longer-defaults-to-ese-" data-ice="link">Client.APIRoot no longer defaults to &apos;ese&apos;.</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#service-class" data-ice="link">Service Class</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#service-info-no-longer-contains-task-list-" data-ice="link">Service.info() no longer contains task list.</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#service-taskinfolist-response-changed-" data-ice="link">Service.taskInfoList() response changed.</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#task-class" data-ice="link">Task Class</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#task-info-response-changed-" data-ice="link">Task.info() response changed.</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#task-submit-and-task-submitandwait-options-changed-" data-ice="link">Task.submit() and Task.submitAndWait() options changed.</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#job-class" data-ice="link">Job Class</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#job-info-response-changed-" data-ice="link">Job.info() response changed.</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#job-event-names-changed-they-are-now-the-same-as-the-client-events-" data-ice="link">Job event names changed.  They are now the same as the Client events.</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#job-wait-response-changed-" data-ice="link">Job.wait() response changed.</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#types" data-ice="link">Types</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#taskinfo" data-ice="link">TaskInfo</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-taskinfo-in-v2" data-ice="link">Example of TaskInfo in v2</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-taskinfo-in-v3" data-ice="link">Example of TaskInfo in v3</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#serviceinfo" data-ice="link">ServiceInfo</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-serviceinfo-in-v2" data-ice="link">Example of ServiceInfo in v2</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-serviceinfo-in-v3" data-ice="link">Example of ServiceInfo in v3</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#submitoptions" data-ice="link">SubmitOptions</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-submitoptions-in-v2" data-ice="link">Example of SubmitOptions in v2</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-submitoptions-in-v3" data-ice="link">Example of SubmitOptions in v3</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#jobinfo" data-ice="link">JobInfo</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-jobinfo-in-v2" data-ice="link">Example of JobInfo in v2</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-jobinfo-in-v3" data-ice="link">Example of JobInfo in v3</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#jobresults" data-ice="link">JobResults</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-jobresults-in-v2" data-ice="link">Example of JobResults in v2</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/migration-guide.html"><a href="manual/tutorial/migration-guide.html#example-of-jobresults-in-v3" data-ice="link">Example of JobResults in v3</a></li>
+<li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#getting-started" data-ice="link">Getting Started</a></li>
 <li data-ice="manualNav" class="indent-h1 manual-color manual-color-tutorial" data-section-count="&#x25A0;&#x25A0;&#x25A0;&#x25A0;" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#gsf-javascript-client-sdk" data-ice="link">GSF JavaScript Client SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#about-the-sdk" data-ice="link">About the SDK</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/getting-started.html"><a href="manual/tutorial/getting-started.html#basic-usage" data-ice="link">Basic Usage</a></li>
@@ -63,13 +93,13 @@
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#get-task-information" data-ice="link">Get Task Information</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#run-a-task" data-ice="link">Run a Task</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#using-promises" data-ice="link">Using Promises</a></li>
-<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#1-use-wait-" data-ice="link">1. Use .wait()</a></li>
+<li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#1-use-submit-and-then-wait-" data-ice="link">1. Use .submit() and then .wait()</a></li>
 <li data-ice="manualNav" class="indent-h5" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#2-use-submitandwait-" data-ice="link">2. Use .submitAndWait()</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#using-server-events" data-ice="link">Using Server Events</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#tracking-job-progress" data-ice="link">Tracking Job Progress</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#progress-callbacks" data-ice="link">Progress Callbacks</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#progress-events" data-ice="link">Progress Events</a></li>
-<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#server-progress-events" data-ice="link">Server Progress Events</a></li>
+<li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#client-progress-events" data-ice="link">Client Progress Events</a></li>
 <li data-ice="manualNav" class="indent-h4" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#job-progress-events" data-ice="link">Job Progress Events</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#cancelling-jobs" data-ice="link">Cancelling Jobs</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/tutorial/examples.html"><a href="manual/tutorial/examples.html#-a-name-typescript-a-typescript-example" data-ice="link"> Typescript Example</a></li>
@@ -89,6 +119,9 @@
     <ul class="manual-toc">
       
     <li data-ice="manualNav" class="indent-h1 manual-color manual-color-changelog" data-section-count="&#x25A0;&#x25A0;&#x25A0;" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html" data-ice="link">Change Log</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#3-0-0-2018-03-21" data-ice="link">3.0.0 / 2018-03-21</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#breaking-changes" data-ice="link">Breaking Changes</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#2-2-0-2018-03-22" data-ice="link">2.2.0 / 2018-03-22</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/changelog/CHANGELOG.html"><a href="manual/changelog/CHANGELOG.html#bug-fixes" data-ice="link">Bug Fixes</a></li>
