--- a/sdk-docs/file/src/Job.js.html
+++ b/sdk-docs/file/src/Job.js.html
@@ -33,30 +33,29 @@
 <nav class="navigation" data-ice="nav"><div>
   <ul>
     
-  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Job.js~Job.html">Job</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Server.js~Server.html">Server</a></span></span></li>
+  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Client.js~Client.html">Client</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Job.js~Job.html">Job</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Service.js~Service.html">Service</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/src/Task.js~Task.html">Task</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-GSF">GSF</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Accepted">Accepted</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Completed">Completed</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Failed">Failed</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobInfo">JobInfo</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Progress">Progress</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Started">Started</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-Succeeded">Succeeded</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-ClientOptions">ClientOptions</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobListOptions">JobListOptions</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobAccepted">JobAccepted</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobCompleted">JobCompleted</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobFailed">JobFailed</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobProgress">JobProgress</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobStarted">JobStarted</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobSucceeded">JobSucceeded</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobListOptions">JobListOptions</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-ServerArgs">ServerArgs</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-GSF">GSF</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobInfo">JobInfo</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobResults">JobResults</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-NodeInfo">NodeInfo</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-ServiceInfo">ServiceInfo</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-InputParameter">InputParameter</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobOptions">JobOptions</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobProgressInfo">JobProgressInfo</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobResults">JobResults</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-JobStartedInfo">JobStartedInfo</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-OutputParameter">OutputParameter</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-SubmitOptions">SubmitOptions</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-typedef">T</span><span data-ice="name"><span><a href="typedef/index.html#static-typedef-TaskInfo">TaskInfo</a></span></span></li>
 </ul>
@@ -64,8 +63,224 @@
 </nav>
 
 <div class="content" data-ice="content"><h1 data-ice="title">src/Job.js</h1>
-<pre class="source-code line-number raw-source-code"></pre>
-<p data-ice="emptySourceCode">Sorry, this documentation does not provide source code.</p>
+<pre class="source-code line-number raw-source-code"><code class="prettyprint linenums" data-ice="content">import * as request from &apos;superagent&apos;;
+import saNoCache from &apos;superagent-no-cache&apos;;
+import EventEmitter from &apos;events&apos;;
+
+import * as sdkUtils from &apos;./utils/utils.js&apos;;
+import * as SERVER_API from &apos;./utils/GSF_API&apos;;
+import EVENTS from &apos;./utils/EVENTS&apos;;
+
+const nocache = sdkUtils.isIE() ? saNoCache.withQueryStrings : saNoCache;
+
+/**
+ * The Job class is used for job operations.
+ */
+class Job extends EventEmitter {
+  /**
+   * @param {Client} client - The GSF Client object.
+   * @param {number} jobId - The jobId.
+   * @param {function(info: JobProgressInfo)} [progressCallback] - The callback to handle job progress.
+   * @param {function(info: JobStartedInfo)} [startedCallback] - The callback that is called when the job starts.
+   *  For more reliable job started information, listen to the GSF JobStarted
+   *  events as this callback may not always get called.  In some cases the job
+   *  can start before the callback is registered.
+   * @emits {JobFailed}
+   * @emits {JobSucceeded}
+   * @emits {JobCompleted}
+   * @emits {JobStarted}
+   * @emits {JobAccepted}
+   * @emits {JobProgress}
+   */
+  constructor(client, jobId, progressCallback, startedCallback) {
+    // Init EventEmitter superclass.
+    super();
+
+    /**
+     * The job Id.
+     * @type {number}
+     */
+    this.jobId = jobId;
+
+    // Server object.
+    this._client = client;
+
+    // Job endpoint.
+    this._jobURL = [this._client.rootURL, SERVER_API.JOBS_PATH,
+      this.jobId].join(&apos;/&apos;);
+
+    // Allow infinite listeners.
+    this.setMaxListeners(0);
+
+    // Store promise for wait() function if called.
+    this._waiting = null;
+
+    // Call progress and started callbacks if supplied to constructor.
+    progressCallback &amp;&amp; this.on(EVENTS.progress, progressCallback);
+    startedCallback &amp;&amp; this.on(EVENTS.started, startedCallback);
+
+    // Function to handle events.
+    this._handler = (eventName, data) =&gt; {
+      // Only care about events pertaining to this job.
+      if (data.jobId !== this.jobId) return;
+
+      // Re-emit the rest of the events.
+      this.emit(eventName, data);
+    };
+
+    // Listen for events from our server.  Pass
+    // them into the handler with job event type.
+    Object.keys(EVENTS).forEach((key) =&gt; {
+      this._client.on(EVENTS[key], (data) =&gt; {
+        this._handler(EVENTS[key], data);
+      });
+    });
+
+  }
+
+  /**
+   * Waits for the job to complete.
+   * @return {Promise&lt;JobResults, error&gt;} Returns a promise that is resolved when a job is
+   *  successful, returning the job results object.
+   *  If a job fails, the promise is rejected with an error message.
+   */
+  wait() {
+    if (!this._waiting) {
+
+      this._waiting = new Promise((resolve, reject) =&gt; {
+        // Check to make sure it hasn&apos;t already completed.
+        this.info().then((info) =&gt; {
+          if (info.jobStatus === EVENTS.succeeded) {
+            resolve(info.jobResults);
+          } else if (info.jobStatus === EVENTS.failed) {
+            reject(info.jobError);
+          }
+        }).catch((err) =&gt; {
+          reject(err);
+        });
+
+        // Listen to job events.
+        this.once(EVENTS.succeeded, (data) =&gt; {
+          this.info().then((info) =&gt; {
+            resolve(info.jobResults);
+          });
+        });
+        this.once(EVENTS.failed, (data) =&gt; {
+          this.info().then((info) =&gt; {
+            reject(info.jobError);
+          });
+        });
+      });
+    }
+
+    return this._waiting;
+  }
+
+  /**
+   * The JobInfo object contains information about a job.
+   * @typedef {Object} JobInfo
+   * @property {string} serviceName - The name of the service.
+   * @property {string} taskName - The name of the task.
+   * @property {JobOptions} [jobOptions] - Processing directives to submit along with the job.
+   * @property {Object} [inputParameters] - The input parameters.
+   * @property {string} jobId - The job id.
+   * @property {number} [jobProgress] - The percentage of job completion.
+   * @property {string} [jobMessage] - A status message that is sent with progress updates.
+   * @property {string} jobStatus - The status of the job. It can be Accepted,
+   *  Started, Succeeded, or Failed.
+   * @property {JobResults} [jobResults] - The job output results.
+   * @property {string} [jobSubmitted] - Time the job was submitted.
+   * @property {string} [jobStart] - Time the job started processing.
+   * @property {string} [jobEnd] - Time the job finished processing.
+   * @property {string} [jobError] - An error from the job, if there was one.
+   * @property {NodeInfo} [nodeInfo] - Provides information about the node on which the job ran.
+   */
+
+  /**
+   * Provides information about the node on which the job ran.
+   * @typedef {Object} NodeInfo
+   * @property {string} nodeAddress - This is the address of the machine that ran job.
+   * @property {number} nodePort - The port of the server that ran the job.
+   * @property {number} workerID - The ID of the worker that ran the job.
+   */
+
+  /**
+   * The job output results.
+   * @typedef {Object} JobResults
+   * @property {*} &lt;parameterName&gt;.best - Result from the first parameter mapper which
+   * was able to reverse translate the output value.
+   * @property {*} &lt;parameterName&gt;.raw - The raw output value returned by the task.
+   */
+
+  /**
+   * Retrieves the job information.
+   * @return {Promise&lt;JobInfo, error&gt;} Returns a promise to a JobInfo object.
+   */
+  info() {
+    return new Promise((resolve, reject) =&gt; {
+      const jobStatusURL = this._jobURL;
+
+      // Get job status.
+      request
+        .get(jobStatusURL)
+        .use(nocache) // Prevents caching of *only* this request
+        .set(this._client.headers)
+        .end((err, res) =&gt; {
+          if (res &amp;&amp; res.ok) {
+            resolve(res.body);
+          } else {
+            const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
+            const text = ((err &amp;&amp; err.response &amp;&amp; err.response.text) ? &apos;: &apos; +
+             err.response.text : &apos;&apos;);
+            reject(&apos;Error requesting job info&apos; + status + text);
+          }
+        });
+    });
+
+  }
+
+  /**
+   * Cancels the job.
+   * @param {boolean} force - If true, the job will force cancel.  Please note that
+   *  setting force to true may be unsafe depending on the type of job
+   *  as it may not be able to properly shut down or clean up.
+   * @return {Promise&lt;true, error&gt;} Returns a promise when cancel is submitted.  If request
+   *  is successfully submitted, the promise will be resolved with a value of true.
+   *  If the request fails, the promise will be resolved with an error message.
+   *  Note that this only represents the success of the request made to the server,
+   *  not the cancellation itself.  Use the Job.Info() function (or Job events)
+   *  to retrieve the status of the job and to learn when it is actually cancelled.
+   */
+  cancel(force) {
+    // Job url.
+    const url = this._jobURL;
+    return new Promise((resolve, reject) =&gt; {
+      // Cancel force flag.
+      const requestStatus = force ? &apos;KillRequested&apos; : &apos;CancelRequested&apos;;
+      // Cancel job.
+      request
+        .put(url)
+        .set(&apos;Content-Type&apos;, &apos;application/json&apos;)
+        .send(JSON.stringify({&apos;jobStatus&apos;: requestStatus}))
+        .use(nocache) // Prevents caching of *only* this request
+        .set(this._client.headers)
+        .end((err, res) =&gt; {
+          if (res &amp;&amp; res.ok) {
+            resolve(true);
+          } else {
+            const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
+            const text = ((err &amp;&amp; err.response &amp;&amp; err.response.text) ? &apos;: &apos; +
+             err.response.text : &apos;&apos;);
+            reject(&apos;Error cancelling job&apos; + status + text);
+          }
+        });
+    });
+  }
+}
+
+export default Job;
+</code></pre>
+
 </div>
 
 <footer class="footer">
